# AI_eLearning_Web

./: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  render.yml  requirements.txt
src/: main.py
src/agents/: base.py  state.py  utils.py  workflow.py
src/agents/inspector/: prompt.py
src/agents/lecturer/: lecturer.py  lecturer_segment.py  lecturer_state.py  prompt.py  reviewer.py
src/agents/qa/: prompt.py  qa.py  qa_state.py  reviewer.py  rewrite_question.py  supervisor.py  writer.py
src/agents/rag/: rag.py
src/agents/writer/: prompt.py  writer.py
src/api/: chat.py  lecturer.py  qa.py
src/config/: setup.py
src/data/temp/1/: index.faiss  index.pkl
src/data/temp/test/: index.faiss  index.pkl
src/data/vectorstore/8e10155a-6601-4eda-90ac-e7ab3a2fb54b/: index.pkl
